--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Atharv N",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
