--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend Assignment for longshot ai intern role",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd src && nodemon index.js"
   },
   "author": "Atharv N",
   "license": "ISC",
